--- a/public/css/app.css
+++ b/public/css/app.css
@@ -596,8 +596,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-full {
   height: 100%;
 }
-.h-\[400px\] {
-  height: 400px;
+.h-\[40vh\] {
+  height: 40vh;
 }
 .max-h-screen {
   max-height: 100vh;
@@ -729,11 +729,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .gap-5 {
   gap: 1.25rem;
 }
-.gap-6 {
-  gap: 1.5rem;
-}
 .gap-3 {
   gap: 0.75rem;
+}
+.gap-6 {
+  gap: 1.5rem;
 }
 .gap-y-4 {
   row-gap: 1rem;
@@ -906,6 +906,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .p-10 {
   padding: 2.5rem;
+}
+.p-4 {
+  padding: 1rem;
 }
 .py-4 {
   padding-top: 1rem;
@@ -1385,10 +1388,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .sm\:max-w-3xl {
     max-width: 48rem;
-  }
-
-  .sm\:max-w-4xl {
-    max-width: 56rem;
   }
 
   .sm\:max-w-5xl {
