--- a/public/css/app.css
+++ b/public/css/app.css
@@ -663,6 +663,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[170px\] {
   width: 170px;
 }
+.w-\[200px\] {
+  width: 200px;
+}
+.w-\[120px\] {
+  width: 120px;
+}
+.w-\[10px\] {
+  width: 10px;
+}
+.w-\[100px\] {
+  width: 100px;
+}
 .min-w-full {
   min-width: 100%;
 }
